syntax = "proto3";

option go_package = "achuala.in/ledger/glaccount;glaccount";

message GeneralLedgerAccount {
    string id = 1;
    string code = 2;
    string parentId = 3;
    string organizationId = 4;
    string description = 5;
    string type = 6;
    bool disabled = 7;
    bool allowManualEntries = 8;
    string usage = 9;
    map<string, string> tags = 10;
}

message GetGLAByIdRq {
    string id = 1;
}

message GetGLAByIdRs {
    string status = 1;
    GeneralLedgerAccount acctDetails = 2;
}

message CreateNewAcctRq {
    GeneralLedgerAccount acctDetails = 1;
}

message CreateNewAcctRs {
    string status = 1;
    string accountId = 2;
}

// request parameters for method get_accounts_by_organization
message GetGLAcctsByOrgRq {
    // organization unique identifier
    string organizationId = 1;
}

// response parameters for method get_accounts_by_organization
message GetGLAcctsByOrgRs {
    string status = 1;
    repeated GeneralLedgerAccount glAccounts = 2;
}